--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spark Utilitie niggers - Discord Bot Development</title>
+    <title>Spark Utilities</title>
     <meta name="description" content="A collective of passionate developers primarily focused on creating exceptional Discord experiences.">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
