--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spark Utilities</title>
-    <meta name="description" content="A collective of passionate developers primarily focused on creating exceptional Discord experiences.">
+    <meta name="description" content="A collective of passionate developers primarily focused on creating exceptional Discord experiences who hate niggers.">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
