--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
                         <div class="team-avatar">
                             <span class="avatar-letter">R</span>
                         </div>
-                        <h3 class="team-name">Rio</h3>
+                        <h3 class="team-name">Ikea</h3>
                         <p class="team-role">Backend Developer & Bot Developer</p>
                         <p class="team-description">
                             Rio specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Rio ensures our bots are robust, scalable, and performant.
