--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
                         <h3 class="team-name">Ikea</h3>
                         <p class="team-role">Backend Developer & Bot Developer</p>
                         <p class="team-description">
-                            Rio specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Rio ensures our bots are robust, scalable, and performant.
+                            Ikea specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Ikea ensures our bots are robust, scalable, and performant.
                         </p>
                         <div class="team-social">
                             <a href="https://discord.com/users/1033463077372448848" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
