--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
                     
                     <div class="team-card">
                         <div class="team-avatar">
-                            <span class="avatar-letter">R</span>
+                            <span class="avatar-letter">I</span>
                         </div>
                         <h3 class="team-name">Ikea</h3>
                         <p class="team-role">Backend Developer & Bot Developer</p>
