--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About Us - Spark Utilities</title>
     <meta name="description" content="We are a passionate collective of developers dedicated to enhancing Discord experiences through innovative bot solutions.">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
     
