--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Spark Utilities</title>
     <meta name="description" content="A collective of passionate developers primarily focused on creating exceptional Discord experiences.">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
     
