--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Projects - Spark Utilities</title>
     <meta name="description" content="Discover the Discord bots and tools we've created to enhance your server experience.">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
     
