--- a/team.html
+++ b/team.html
@@ -6,6 +6,7 @@
     <title>Our Team - Spark Utilities</title>
     <meta name="description" content="Meet the passionate developers behind Spark Utilities.">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
     
