--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spark Utilities</title>
-    <meta name="description" content="A collective of passionate developers primarily focused on creating exceptional Discord experiences.">
+    <meta name="description" content="Professional Discord bot development - Powerful utilities, entertainment bots, and custom solutions for your server.">
+    <meta property="og:title" content="Spark Utilities">
+    <meta property="og:description" content="Premium Discord bots & tools for communities, gamers, and businesses.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sparkutils.netlify.app/">
+    <meta property="og:image" content="https://sparkutils.netlify.app/assets/images/logo.png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    <meta name="theme-color" content="#5865F2">
+    
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
