--- a/team.html
+++ b/team.html
@@ -69,12 +69,12 @@
                     
                     <div class="team-card">
                         <div class="team-avatar">
-                            <span class="avatar-letter">R</span>
+                            <span class="avatar-letter">I</span>
                         </div>
-                        <h3 class="team-name">Rio</h3>
+                        <h3 class="team-name">Ikea</h3>
                         <p class="team-role">Backend Developer & Bot Developer</p>
                         <p class="team-description">
-                            Rio specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Rio ensures our bots are robust, scalable, and performant.
+                            Ikea specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Ikea ensures our bots are robust, scalable, and performant. He can do pretty much anything but set a embed color💔 
                         </p>
                         <div class="team-social">
                             <a href="https://discord.com/users/1033463077372448848" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
