--- a/projects.html
+++ b/projects.html
@@ -109,9 +109,10 @@
                         <a href="#" data-discord-link target="_blank" rel="noopener noreferrer" class="social-icon">
                             <i class="fab fa-discord"></i>
                         </a>
-                    </div>
-                </div>
-
+                 </div>
+            </div>
+        </main>
+    </div>
                 
                 <div class="footer-section">
                     <h3 class="footer-heading">Quick Links</h3>
