--- a/team.html
+++ b/team.html
@@ -69,19 +69,25 @@
                     
                     <div class="team-card">
                         <div class="team-avatar">
-                            <span class="avatar-letter">I</span>
+                            <span class="avatar-letter">T</span>
                         </div>
-                        <h3 class="team-name">Ikea</h3>
-                        <p class="team-role">Backend Developer & Bot Developer</p>
+                        <h3 class="team-name">Taz</h3>
+                        <p class="team-role">Frontend Developer & Website Developer</p>
+                        <div class="team-tags">
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">TypeScript</span>
+                            <span class="tag">Web Developer</span>
+                        </div>
                         <p class="team-description">
-                            Ikea specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Ikea ensures our bots are robust, scalable, and performant. He can do pretty much anything but set a embed color💔 
+                            Taz focuses on frontend development and website creation. With a keen eye for design and user experience, Taz crafts beautiful, intuitive interfaces that make our tools accessible and enjoyable to use.
                         </p>
                         <div class="team-social">
-                            <a href="https://discord.com/users/1033463077372448848" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
-                                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
-                                </svg>
+                            <a href="https://discord.com/users/1267557658844467294" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
+                                <i class="fab fa-discord"></i>
                                 Discord
+                                <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
                     </div>
@@ -89,19 +95,23 @@
                     
                     <div class="team-card">
                         <div class="team-avatar">
-                            <span class="avatar-letter">T</span>
+                            <span class="avatar-letter">I</span>
                         </div>
-                        <h3 class="team-name">Taz</h3>
-                        <p class="team-role">Frontend Developer & Website Developer</p>
+                        <h3 class="team-name">Ikea</h3>
+                        <p class="team-role">Backend Developer & Bot Developer</p>
+                        <div class="team-tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Backend</span>
+                            <span class="tag">Bot Developer</span>
+                        </div>
                         <p class="team-description">
-                            Taz focuses on frontend development and website creation. With a keen eye for design and user experience, Taz crafts beautiful, intuitive interfaces that make our tools accessible and enjoyable to use.
+                            Ikea specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Ikea ensures our bots are robust, scalable, and performant.
                         </p>
                         <div class="team-social">
-                            <a href="https://discord.com/users/1267557658844467294" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
-                                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
-                                </svg>
+                            <a href="https://discord.com/users/1033463077372448848" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
+                                <i class="fab fa-discord"></i>
                                 Discord
+                                <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
                     </div>
