--- a/team.html
+++ b/team.html
@@ -72,7 +72,9 @@
                             <span class="avatar-letter">T</span>
                         </div>
                         <h3 class="team-name">Taz</h3>
-                        <p class="team-role">Frontend Developer & Website Developer</p>
+                        <p class="team-description">
+                            Taz focuses on frontend development and website creation. With a keen eye for design and user experience, Taz crafts beautiful, intuitive interfaces that make our tools accessible and enjoyable to use.
+                        </p>
                         <div class="team-tags">
                             <span class="tag">HTML</span>
                             <span class="tag">CSS</span>
@@ -80,14 +82,9 @@
                             <span class="tag">TypeScript</span>
                             <span class="tag">Web Developer</span>
                         </div>
-                        <p class="team-description">
-                            Taz focuses on frontend development and website creation. With a keen eye for design and user experience, Taz crafts beautiful, intuitive interfaces that make our tools accessible and enjoyable to use.
-                        </p>
                         <div class="team-social">
-                            <a href="https://discord.com/users/1267557658844467294" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
+                            <a href="https://discord.com/users/1267557658844467294" target="_blank" rel="noopener noreferrer" class="social-icon">
                                 <i class="fab fa-discord"></i>
-                                Discord
-                                <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
                     </div>
@@ -98,20 +95,17 @@
                             <span class="avatar-letter">I</span>
                         </div>
                         <h3 class="team-name">Ikea</h3>
-                        <p class="team-role">Backend Developer & Bot Developer</p>
+                        <p class="team-description">
+                            Ikea specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Ikea ensures our bots are robust, scalable, and performant.
+                        </p>
                         <div class="team-tags">
                             <span class="tag">Python</span>
                             <span class="tag">Backend</span>
                             <span class="tag">Bot Developer</span>
                         </div>
-                        <p class="team-description">
-                            Ikea specializes in backend development and Discord bot creation. With expertise in server-side technologies and Discord API integration, Ikea ensures our bots are robust, scalable, and performant.
-                        </p>
                         <div class="team-social">
-                            <a href="https://discord.com/users/1033463077372448848" target="_blank" rel="noopener noreferrer" class="btn btn-outline btn-sm">
+                            <a href="https://discord.com/users/1033463077372448848" target="_blank" rel="noopener noreferrer" class="social-icon">
                                 <i class="fab fa-discord"></i>
-                                Discord
-                                <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
                     </div>
