--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://sparkutils.netlify.app/assets/images/logo.png">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
-    <meta name="theme-color" content="#5865F2">
+    <meta name="theme-color" content="#7ED321">
     
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="icon" type="image/png" href="assets/images/logo.png">
