--- a/projects/index.html
+++ b/projects/index.html
@@ -14,8 +14,8 @@
     <meta property="og:image:height" content="512">
     <meta name="theme-color" content="#7ED321">
     
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="icon" type="image/png" href="/assets/images/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -143,7 +143,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/discordlink.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/discordlink.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
