--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             </div>
         </nav>
 
+        
+        <main class="hero-section">
+            <div class="hero-content">
+                <div class="hero-logo">
+                    <img src="assets/images/logo.png" alt="Spark Utilities" class="hero-logo-img">
+                </div>
 
                 <h1 class="hero-title">SPARK UTILITIES</h1>
 
