--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://sparkutils.netlify.app/assets/images/logo.png">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
-    <meta name="theme-color" content="#5865F2">
+    <meta name="theme-color" content="#22c55e">
     
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="icon" type="image/png" href="../assets/images/logo.png">
@@ -44,6 +44,10 @@
                     <a href="../team.html" class="nav-link">
                         <i class="fas fa-users"></i>
                         <span>Our Team</span>
+                    </a>
+                    <a href="../extras/" class="nav-link">
+                        <i class="fas fa-plus-circle"></i>
+                        <span>Extras</span>
                     </a>
                 </div>
             </div>
