--- a/index.html
+++ b/index.html
@@ -81,17 +81,14 @@
         </nav>
 
         
-        <main class="hero-section">
-            <div class="hero-content">
-                <div class="hero-logo">
-                    <img src="assets/images/logo.png" alt="Spark Utilities" class="hero-logo-img">
-                </div>
-
-                <h1 class="hero-title">SPARK UTILITIES</h1>
-
-                <p class="hero-description">
-                    A collective of passionate developers primarily focused on creating exceptional Discord experiences.
-                </p>
+      <main class="hero-section">
+    <div class="hero-content">
+        <h1 class="hero-title">SPARK UTILITIES</h1>
+        <p class="hero-description">
+            A collective of passionate developers primarily focused on creating exceptional Discord experiences.
+        </p>
+    </div>
+</main>
 
                 <div class="hero-buttons">
                     <a href="projects.html" class="btn btn-primary">
