--- a/extras/index.html
+++ b/extras/index.html
@@ -146,7 +146,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <img src="assets/images/logo.png" alt="Spark Utilities" class="footer-logo-img">
+                        <img src="/assets/images/logo.png" alt="Spark Utilities" class="footer-logo-img">
                         <span class="footer-title">Spark Utilities</span>
                     </div>
                     <p class="footer-description">
