--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <i class="fas fa-users"></i>
                         <span>Our Team</span>
                     </a>
-                    <a href="#" class="nav-link">
+                    <a href="extras.html" class="nav-link">
                         <i class="fas fa-plus-circle"></i>
                         <span>Extras</span>
                     </a>
