--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
                         <i class="fas fa-users"></i>
                         <span>Our Team</span>
                     </a>
-                    <a href="#" class="nav-link">
+                    <a href="extras.html" class="nav-link">
                         <i class="fas fa-plus-circle"></i>
                         <span>Extras</span>
                     </a>
