--- a/projects/emojis/index.html
+++ b/projects/emojis/index.html
@@ -41,9 +41,13 @@
                         <i class="fas fa-info-circle"></i>
                         <span>About Us</span>
                     </a>
-                    <a href="../../team.html" class="nav-link">
+                   <a href="../team.html" class="nav-link">
                         <i class="fas fa-users"></i>
                         <span>Our Team</span>
+                    </a>
+                    <a href="index.html" class="nav-link active">
+                        <i class="fas fa-plus"></i>
+                        <span>Extras</span>
                     </a>
                 </div>
             </div>
