highlight bug fix

--- a/projects/emojis/index.html
+++ b/projects/emojis/index.html
@@ -45,7 +45,7 @@
                         <i class="fas fa-users"></i>
                         <span>Our Team</span>
                     </a>
-                    <a href="index.html" class="nav-link active">
+                    <a href="index.html" class="nav-link">
                         <i class="fas fa-plus"></i>
                         <span>Extras</span>
                     </a>
