--- a/extras/ourservices.html
+++ b/extras/ourservices.html
@@ -118,6 +118,10 @@
                                 <i class="fas fa-check"></i>
                                 <span>Fun Commands</span>
                             </div>
+                          <div class="pricing-feature">
+                                <i class="fas fa-check"></i>
+                                <span>Music Commands</span>
+                            </div>
                             <div class="pricing-feature">
                                 <i class="fas fa-check"></i>
                                 <span>Server Utilities</span>
